--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "jest": "^29.3.1"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
